# Jyogi_navi

./: .coderabbit.yaml  .envrc  .gitignore  AGENTS.md  README.md  flake.nix  lefthook.yml  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  task.md
.github/workflows/: auto-assign.yml  check-openapi.yml  ci-BE.yml  ci-FE.yml  ci-infra.yml  deploy-api.yml  deploy-dify.yml  deploy-fe.yml  discord-ingest.yml  test-api.yml
apps/admin/: package-lock.json  package.json  wrangler.jsonc
apps/admin/src/: middleware.ts
apps/admin/src/app/: globals.css  layout.tsx
apps/api/: .env.example  Dockerfile  config.py  exceptions.py  main.py  openapi.json  package.json  pyproject.toml
apps/api/db/: __init__.py  models.py  session.py
apps/api/dependencies/: auth.py
apps/api/docs/: migration-guide.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_create_sessions_and_usage_logs.py  002_create_faq_embeddings.py  003_create_feedbacks.py  004_create_users.py
apps/api/models/: session.py
apps/api/routers/: admin.py  auth.py  chat.py  consent.py  faq.py  health.py  usage_logs.py
apps/api/schemas/: admin.py  auth.py  chat.py  faq.py  feedback.py  session.py
apps/api/scripts/: export_openapi.py
apps/api/services/: dify_client.py  discord_auth.py  faq_search.py  jwt_utils.py  log_store.py  pii_mask.py  rate_limit.py  stats.py
apps/api/tests/: conftest.py
apps/api/tests/integration/api/: test_chat.py  test_faq_search.py  test_health.py  test_usage_logs.py
apps/api/tests/unit/: test_error_handlers.py
apps/api/tests/unit/chat/: test_chat_router.py
apps/api/tests/unit/dify_client/: test_dify_client.py
apps/api/tests/unit/faq_search/: test_faq_search.py
apps/api/tests/unit/log_store/: test_save_usage_log.py
apps/api/tests/unit/pii_mask/: test_pii_mask.py
apps/api/tests/unit/rate_limit/: test_rate_limit.py
apps/web/: .gitignore  .prettierignore  .stylelintrc.json  eslint.config.mjs  openapi-ts.config.ts  oxlint.json  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
docs/: 01_feature-list.md  02_tech-stack.md  06_directory.md  07_infrastructure.md  09_schedule_and_issues.md  iac.md  nix-setup.md  schema-driven.md  振り返り.md
infra/cloudflare/: main.tf  outputs.tf  variables.tf  versions.tf
infra/dify/: .env.example  SETUP.md  docker-compose.yml
infra/gcp/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/github/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/ingest/: pyproject.toml
scripts/ingest/discord/: export.md  fetch.py  normalize.py  pyproject.toml  run.py  test_tidb_manual.py  upload_dify.py  upload_tidb.py  verify_tidb_manual.py
scripts/ingest/discord/tests/: sample_channel.json  sample_channel.txt  test_normalize.py
(+33 files in other folders)
