[project]
name = "api"
version = "0.1.0"
description = "Jyogi Navi Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "greenlet>=3.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
    "httpx>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]
