[project]
name = "api"
version = "0.1.0"
description = "Jyogi Navi Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "greenlet>=3.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "ruff>=0.4.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes（未使用import、未定義変数等）
    "I",    # isort（import順序）
    "UP",   # pyupgrade（古い構文を新しいPython構文へ）
    "B",    # flake8-bugbear（バグになりやすいパターン）
    "S",    # flake8-bandit（セキュリティ）
    "ARG",  # flake8-unused-arguments（未使用引数）
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff独自ルール
]
ignore = [
    "S101",   # assert使用（テストで必要）
    "S105",   # ハードコードされたパスワード（設定読み込みで誤検知）
    "S106",   # 同上
    "ARG001", # 未使用引数（FastAPI Dependsパターンで必要）
    "ARG002", # 未使用引数（middlewareシグネチャ等）
    "B008",   # 関数呼び出しをデフォルト引数に使用（FastAPI Dependsパターン）
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "ARG"]
"**/migrations/versions/**/*.py" = ["UP007", "UP035"]

[tool.ruff.lint.isort]
known-first-party = ["config", "db", "middleware", "migrations", "models", "routers", "schemas", "services"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "-v",
]

[tool.coverage.run]
omit = ["tests/*", "*/__init__.py"]
