[project]
name = "ingest"
version = "0.1.0"
description = "Discord / Notion ログ取得・正規化・Dify アップロードスクリプト"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "pymysql>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["discord/tests", "notion/tests"]
